vixens-gitops/apps/argocd/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-https
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-gandi-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - argocd.truxonline.com
    secretName: argocd-truxonline-tls
  rules:
  - host: argocd.truxonline.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
